set line height on page nav button to 1 to prevent gap under page nav label

--- a/src/scss/components/_page-nav.scss
+++ b/src/scss/components/_page-nav.scss
@@ -33,6 +33,7 @@
   font-size: $typescale-2;
   font-weight: $font-weight-semibold;
   color: $color-primary;
+  line-height: 1;
 
   @include breakpoint(lg) {
     display: none;
